--- a/lib/until/language/app_ru.arb
+++ b/lib/until/language/app_ru.arb
@@ -1,4 +1,5 @@
 {
+  "database_name": "Supplications_ru",
   "app_name": "Мольбы из Корана",
   "bookmarks": "Избранное",
   "bookmarks_is_empty": "Избранного нет",
