Added locale database with first 5 ayahs

--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "az",
+  "tableName": "Table_of_supplications_az",
   "appName": "Дуалар Корана",
   "cards": "Картлар",
   "pages": "Сахифәләр",
