--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "id",
+  "tableName": "Table_of_supplications_id",
   "appName": "Doa dari Al-Quran",
   "cards": "Kartu",
   "pages": "Halaman",
