--- a/lib/l10n/app_kg.arb
+++ b/lib/l10n/app_kg.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "kg",
+  "tableName": "Table_of_supplications_kg",
   "appName": "Корандык дуалар",
   "cards": "Карталар",
   "pages": "Беттер",
