--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "kk",
+  "tableName": "Table_of_supplications_kk",
   "appName": "Құран Дұасы",
   "cards": "Карталар",
   "pages": "Беттер",
