--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "tr",
+  "tableName": "Table_of_supplications_tr",
   "appName": "Kur'ân-ı Kerîm'den duâlar",
   "cards": "Kartlar",
   "pages": "Sayfalar",
