--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "uz",
+  "tableName": "Table_of_supplications_uz",
   "appName": "Қуръон Дуолар",
   "cards": "Карталар",
   "pages": "Саҳифалар",
