Fixes locale added ayahs

--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -1,28 +1,28 @@
 {
   "@@locale": "kk",
   "tableName": "Table_of_supplications_kk",
-  "appName": "Құран Дұасы",
+  "appName": "Құраннан дұғалар",
   "cards": "Карталар",
-  "pages": "Беттер",
-  "bookmarks": "Барқа",
-  "bookmarksIsEmpty": "Барқа жоқ",
+  "pages": "Парақшалар",
+  "bookmarks": "Таңдаулылар",
+  "bookmarksIsEmpty": "Таңдаулылар жоқ",
   "settings": "Параметрлер",
   "copied": "Көшірілді",
   "added": "Қосылды",
-  "removed": "Алып тұрылды",
-  "randomAyah": "Кесік Аят",
-  "arabicTextFont": "Арап Шрифты",
-  "textFont": "Тілдеңі Шрифты",
-  "arabicAlignText": "Аят Жатысуы",
-  "alignText": "Тілдегі Мәтіннің Жатысуы",
-  "arabicTextSize": "Аят Мәтінін Енгізі",
-  "textSize": "Тілдегі Мәтінін Енгізі",
-  "arabicTextColor": "Аят Мәтінін Тұзы",
-  "textColor": "Тілдегі Мәтінін Тұзы",
-  "forLightTheme": "Ақ Мәзір үшін",
-  "forDarkTheme": "Күн Мәзір үшін",
-  "close": "Жабық",
-  "adaptiveTheme": "Адаптивті Мәзір",
-  "darkTheme": "Күн Мәзір",
-  "displayAlways": "Экран қазірғы жүмісте"
+  "removed": "Өшірілді",
+  "randomAyah": "Кездейсоқ аят",
+  "arabicTextFont": "Арабша қаріп",
+  "textFont": "Аударма қаріпі",
+  "arabicAlignText": "Аяттардың орналасуы",
+  "alignText": "Аударма мәтінінің орналасуы",
+  "arabicTextSize": "Аяттар мәтінінің өлшемі",
+  "textSize": "Аударма мәтінінің өлшемі",
+  "arabicTextColor": "Аяттар мәтінінің түсі",
+  "textColor": "Аударма мәтінінің түсі",
+  "forLightTheme": "Жарық тақырыпқа арналған",
+  "forDarkTheme": "Күңгірт тақырыпқа арналған",
+  "close": "Жабу",
+  "adaptiveTheme": "Бейімделгіш тақырып",
+  "darkTheme": "Күңгірт тақырып",
+  "displayAlways": "Әрдайым қосулы дисплей"
 }
