--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "uz",
   "tableName": "Table_of_supplications_uz",
-  "appName": "Қуръон Дуолар",
+  "appName": "Қуръондан дуолар",
   "cards": "Карталар",
   "pages": "Саҳифалар",
   "bookmarks": "Хатчўплар",
@@ -11,18 +11,18 @@
   "added": "Қўшилди",
   "removed": "Олиб ташланди",
   "randomAyah": "Тасодифий Аят",
-  "arabicTextFont": "Араб Шрифи",
-  "textFont": "Таржима Шрифи",
-  "arabicAlignText": "Аят Ёрлашуви",
-  "alignText": "Таржима Матн Ёрлашуви",
-  "arabicTextSize": "Аят Матн Ҳажи",
+  "arabicTextFont": "Араб шрифи",
+  "textFont": "Таржима шрифи",
+  "arabicAlignText": "Аят ёрлашуви",
+  "alignText": "Таржима матн ёрлашуви",
+  "arabicTextSize": "Аят матн Ҳажи",
   "textSize": "Таржима Матн Ҳажи",
-  "arabicTextColor": "Аят Матн Ранги",
-  "textColor": "Таржима Матн Ранги",
-  "forLightTheme": "Очиқ Мавзу Учун",
-  "forDarkTheme": "Тунги Мавзу Учун",
+  "arabicTextColor": "Аят матн ранги",
+  "textColor": "Таржима матн ранги",
+  "forLightTheme": "Очиқ мавзу учун",
+  "forDarkTheme": "Тунги мавзу учун",
   "close": "Йопиш",
-  "adaptiveTheme": "Адаптив Мавзу",
-  "darkTheme": "Тунги Мавзу",
-  "displayAlways": "Ҳамма Вақтда Экран Ёқ"
+  "adaptiveTheme": "Адаптив мавзу",
+  "darkTheme": "Тунги мавзу",
+  "displayAlways": "Ҳамма вақтда экран ёқ"
 }
