Added localizations, all ayahs and other fixes for languages

--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -11,7 +11,7 @@
   "added": "Әләвә едилди",
   "removed": "Силнди",
   "randomAyah": "Тасаддуфи аят",
-  "arabicTextFont": "Араб шрифти",
+  "arabicTextFont": "Араб щрифти",
   "textFont": "Тәржимә щрифти",
   "arabicAlignText": "Аят ёрләшмәси",
   "alignText": "Тәржимә мәтни ёрләшмәси",
