--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -2,27 +2,27 @@
   "@@locale": "id",
   "tableName": "Table_of_supplications_id",
   "appName": "Doa dari Al-Quran",
-  "cards": "Kartu",
+  "cards": "Kartu-kartu",
   "pages": "Halaman",
   "bookmarks": "Penanda",
   "bookmarksIsEmpty": "Tidak ada penanda",
   "settings": "Pengaturan",
-  "copied": "Tersalin",
+  "copied": "Disalin",
   "added": "Ditambahkan",
   "removed": "Dihapus",
-  "randomAyah": "Ayat Acak",
-  "arabicTextFont": "Font Arab",
-  "textFont": "Font Terjemahan",
-  "arabicAlignText": "Penyelarasan Ayat",
-  "alignText": "Penyelarasan Teks Terjemahan",
-  "arabicTextSize": "Ukuran Teks Ayat",
-  "textSize": "Ukuran Teks Terjemahan",
-  "arabicTextColor": "Warna Teks Ayat",
-  "textColor": "Warna Teks Terjemahan",
-  "forLightTheme": "Untuk Tema Terang",
-  "forDarkTheme": "Untuk Tema Gelap",
-  "close": "Tutup",
-  "adaptiveTheme": "Tema Adaptif",
-  "darkTheme": "Tema Gelap",
-  "displayAlways": "Selalu Tampilkan"
+  "randomAyah": "Ayah acak",
+  "arabicTextFont": "Huruf arab",
+  "textFont": "Font terjemahan",
+  "arabicAlignText": "Lokasi ayat tersebut",
+  "alignText": "Penyelarasan teks terjemahan",
+  "arabicTextSize": "Ukuran teks ayah",
+  "textSize": "Ukuran teks terjemahan",
+  "arabicTextColor": "Warna teks ayah",
+  "textColor": "Warna teks terjemahan",
+  "forLightTheme": "Untuk tema ringan",
+  "forDarkTheme": "Untuk tema gelap",
+  "close": "Menutup",
+  "adaptiveTheme": "Tema adaptif",
+  "darkTheme": "Tema gelap",
+  "displayAlways": "Tampilan selalu aktif"
 }
