--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "kk",
   "tableName": "Table_of_supplications_kk",
-  "appName": "Құраннан дұғалар",
+  "appName": "Құран дұғалары",
   "cards": "Карталар",
   "pages": "Парақшалар",
   "bookmarks": "Таңдаулылар",
