--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "uz",
   "tableName": "Table_of_supplications_uz",
-  "appName": "Қуръондан дуолар",
+  "appName": "Қъурондан дуолар",
   "cards": "Карталар",
   "pages": "Саҳифалар",
   "bookmarks": "Хатчўплар",
@@ -10,19 +10,19 @@
   "copied": "Нусхаланган",
   "added": "Қўшилди",
   "removed": "Олиб ташланди",
-  "randomAyah": "Тасодифий Аят",
+  "randomAyah": "Тасодифий оят",
   "arabicTextFont": "Араб шрифи",
   "textFont": "Таржима шрифи",
-  "arabicAlignText": "Аят ёрлашуви",
-  "alignText": "Таржима матн ёрлашуви",
-  "arabicTextSize": "Аят матн Ҳажи",
-  "textSize": "Таржима Матн Ҳажи",
-  "arabicTextColor": "Аят матн ранги",
+  "arabicAlignText": "Оят жойлашуви",
+  "alignText": "Таржима матни жойлашуви",
+  "arabicTextSize": "Оят матни ҳажми",
+  "textSize": "Таржима матн ҳажми",
+  "arabicTextColor": "Оят матни ранги",
   "textColor": "Таржима матн ранги",
   "forLightTheme": "Очиқ мавзу учун",
   "forDarkTheme": "Тунги мавзу учун",
-  "close": "Йопиш",
+  "close": "Ёпиш",
   "adaptiveTheme": "Адаптив мавзу",
   "darkTheme": "Тунги мавзу",
-  "displayAlways": "Ҳамма вақтда экран ёқ"
+  "displayAlways": "Экран доимо ёниқ"
 }
