Changed for new database

--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -1,28 +1,28 @@
 {
   "@@locale": "az",
   "tableName": "Table_of_supplications_az",
-  "appName": "Дуалар Корана",
+  "appName": "Курандан дуалар",
   "cards": "Картлар",
-  "pages": "Сахифәләр",
-  "bookmarks": "Ишарәләр",
-  "bookmarksIsEmpty": "Ишарә ёхдур",
-  "settings": "Сазламалар",
-  "copied": "Копияланган",
-  "added": "Әләвә едилди",
+  "pages": "Сəһифәләр",
+  "bookmarks": "Сечилмисләр",
+  "bookmarksIsEmpty": "Сечилмисләр јохдур",
+  "settings": "Тәнзимләмәләр",
+  "copied": "Копиленди",
+  "added": "Әлавә едилди",
   "removed": "Силнди",
-  "randomAyah": "Тасаддуфи аят",
-  "arabicTextFont": "Араб щрифти",
-  "textFont": "Тәржимә щрифти",
-  "arabicAlignText": "Аят ёрләшмәси",
-  "alignText": "Тәржимә мәтни ёрләшмәси",
-  "arabicTextSize": "Аят мәтни Өлчүсү",
-  "textSize": "Тәржимә мәтни Өлчүсү",
-  "arabicTextColor": "Аят мәтни рәнги",
-  "textColor": "Тәржимә мәтни рәнги",
-  "forLightTheme": "Ачық тема үчүн",
-  "forDarkTheme": "Темнә тема үчүн",
-  "close": "Жабық",
-  "adaptiveTheme": "Адаптив тема",
-  "darkTheme": "Кара тема",
-  "displayAlways": "Экран үчүн демей"
+  "randomAyah": "Тесадүфи Ајәт",
+  "arabicTextFont": "Әрәб јазы шрифти",
+  "textFont": "Тәрҹүмә јазы шрифти",
+  "arabicAlignText": "Әрәб мәтнин дүзүлүшү",
+  "alignText": "Тәрҹүмә мәтнин дүзүлүшү",
+  "arabicTextSize": "Әрәб мәтнин өлчүсү",
+  "textSize": "Тәрҹүмә мәтнин өлчүсү",
+  "arabicTextColor": "Әрәб мәтнин рәнги",
+  "textColor": "Тәрҹүмә мәтнин рәнги",
+  "forLightTheme": "Ачық мөвзу үчүн",
+  "forDarkTheme": "Түнд мөвзу үчүн",
+  "close": "Бағла",
+  "adaptiveTheme": "Адаптив мөвзу",
+  "darkTheme": "Түнд мөвзу",
+  "displayAlways": "Даима экран ачықдыр"
 }
