--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -1,28 +1,28 @@
 {
   "@@locale": "az",
   "tableName": "Table_of_supplications_az",
-  "appName": "Курандан дуалар",
-  "cards": "Картлар",
-  "pages": "Сəһифәләр",
-  "bookmarks": "Сечилмисләр",
-  "bookmarksIsEmpty": "Сечилмисләр јохдур",
-  "settings": "Тәнзимләмәләр",
-  "copied": "Копиленди",
-  "added": "Әлавә едилди",
-  "removed": "Силнди",
-  "randomAyah": "Тесадүфи Ајәт",
-  "arabicTextFont": "Әрәб јазы шрифти",
-  "textFont": "Тәрҹүмә јазы шрифти",
-  "arabicAlignText": "Әрәб мәтнин дүзүлүшү",
-  "alignText": "Тәрҹүмә мәтнин дүзүлүшү",
-  "arabicTextSize": "Әрәб мәтнин өлчүсү",
-  "textSize": "Тәрҹүмә мәтнин өлчүсү",
-  "arabicTextColor": "Әрәб мәтнин рәнги",
-  "textColor": "Тәрҹүмә мәтнин рәнги",
-  "forLightTheme": "Ачық мөвзу үчүн",
-  "forDarkTheme": "Түнд мөвзу үчүн",
-  "close": "Бағла",
-  "adaptiveTheme": "Адаптив мөвзу",
-  "darkTheme": "Түнд мөвзу",
-  "displayAlways": "Даима экран ачықдыр"
+  "appName": "Qurandan dualar",
+  "cards": "Kartlar",
+  "pages": "Səhifələr",
+  "bookmarks": "Əlfəcinlər",
+  "bookmarksIsEmpty": "Əlfəcin yoxdur",
+  "settings": "Parametrlər",
+  "copied": "Kopyalandı",
+  "added": "Əlavə edilib",
+  "removed": "Silindi",
+  "randomAyah": "Təsadüfi ayah",
+  "arabicTextFont": "Ərəb şrifti",
+  "textFont": "Tərcümə şrifti",
+  "arabicAlignText": "Ayah Alignment",
+  "alignText": "Tərcümə mətninin düzülməsi",
+  "arabicTextSize": "Ayə mətn ölçüsü",
+  "textSize": "Tərcümə mətninin ölçüsü",
+  "arabicTextColor": "Ayə mətn rəngi",
+  "textColor": "Tərcümə mətninin rəngi",
+  "forLightTheme": "Yüngül mövzu üçün",
+  "forDarkTheme": "Qaranlıq mövzu üçün",
+  "close": "Bağlamaq",
+  "adaptiveTheme": "Adaptiv mövzu",
+  "darkTheme": "Qaranlıq mövzu",
+  "displayAlways": "Ekran həmişə açıq"
 }
