--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "uz",
   "tableName": "Table_of_supplications_uz",
-  "appName": "Қъурондан дуолар",
+  "appName": "Қуръондан дуолар",
   "cards": "Карталар",
   "pages": "Саҳифалар",
   "bookmarks": "Хатчўплар",
@@ -11,18 +11,18 @@
   "added": "Қўшилди",
   "removed": "Олиб ташланди",
   "randomAyah": "Тасодифий оят",
-  "arabicTextFont": "Араб шрифи",
-  "textFont": "Таржима шрифи",
+  "arabicTextFont": "Араб шрифти",
+  "textFont": "Таржима шрифти",
   "arabicAlignText": "Оят жойлашуви",
   "alignText": "Таржима матни жойлашуви",
   "arabicTextSize": "Оят матни ҳажми",
-  "textSize": "Таржима матн ҳажми",
+  "textSize": "Таржима матни ҳажми",
   "arabicTextColor": "Оят матни ранги",
-  "textColor": "Таржима матн ранги",
-  "forLightTheme": "Очиқ мавзу учун",
+  "textColor": "Таржима матни ранги",
+  "forLightTheme": "Ёруғ мавзу учун",
   "forDarkTheme": "Тунги мавзу учун",
   "close": "Ёпиш",
-  "adaptiveTheme": "Адаптив мавзу",
-  "darkTheme": "Тунги мавзу",
-  "displayAlways": "Экран доимо ёниқ"
+  "adaptiveTheme":  "Адаптив мавзу",
+  "darkTheme":  "Тунги мавзу",
+  "displayAlways":  "Экран доимо ёниқ"
 }
