Fixes AZ locale

--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -4,23 +4,23 @@
   "appName": "Qurandan dualar",
   "cards": "Kartlar",
   "pages": "Səhifələr",
-  "bookmarks": "Əlfəcinlər",
+  "bookmarks": "Seçilmişlər",
   "bookmarksIsEmpty": "Əlfəcin yoxdur",
-  "settings": "Parametrlər",
+  "settings": "Ayarlar",
   "copied": "Kopyalandı",
   "added": "Əlavə edilib",
   "removed": "Silindi",
   "randomAyah": "Təsadüfi ayah",
   "arabicTextFont": "Ərəb şrifti",
   "textFont": "Tərcümə şrifti",
-  "arabicAlignText": "Ayah Alignment",
-  "alignText": "Tərcümə mətninin düzülməsi",
+  "arabicAlignText": "Ayələrin düzülüşü",
+  "alignText": "Tərcümə mətninin düzülüşü",
   "arabicTextSize": "Ayə mətn ölçüsü",
-  "textSize": "Tərcümə mətninin ölçüsü",
+  "textSize": "Tərcümə mətninin həcmi",
   "arabicTextColor": "Ayə mətn rəngi",
   "textColor": "Tərcümə mətninin rəngi",
-  "forLightTheme": "Yüngül mövzu üçün",
-  "forDarkTheme": "Qaranlıq mövzu üçün",
+  "forLightTheme": "Işıqlı ekran üçün",
+  "forDarkTheme": "Tünd ekran üçün",
   "close": "Bağlamaq",
   "adaptiveTheme": "Adaptiv mövzu",
   "darkTheme": "Qaranlıq mövzu",
