Added new strings

--- a/lib/l10n/app_az.arb
+++ b/lib/l10n/app_az.arb
@@ -24,5 +24,8 @@
   "close": "Bağlamaq",
   "adaptiveTheme": "Adaptiv mövzu",
   "darkTheme": "Qaranlıq mövzu",
+  "share": "Paylaş",
+  "copy": "Köçür",
+  "sharePic": "Şəkli paylaş",
   "displayAlways": "Ekran həmişə açıq"
 }
