--- a/lib/l10n/app_id.arb
+++ b/lib/l10n/app_id.arb
@@ -24,5 +24,8 @@
   "close": "Menutup",
   "adaptiveTheme": "Tema adaptif",
   "darkTheme": "Tema gelap",
+  "share": "Bagikan",
+  "copy": "Salin",
+  "sharePic": "Bagikan gambar",
   "displayAlways": "Tampilan selalu aktif"
 }
