--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -24,5 +24,8 @@
   "close": "Жабу",
   "adaptiveTheme": "Бейімделгіш тақырып",
   "darkTheme": "Күңгірт тақырып",
+  "share": "Бөлісу",
+  "copy": "Көшіру",
+  "sharePic": "Суретті бөлісу",
   "displayAlways": "Әрдайым қосулы дисплей"
 }
