--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -24,5 +24,8 @@
   "close": "Жабуу",
   "adaptiveTheme": "Адаптивдүү тема",
   "darkTheme": "Кара түстөгү тема",
+  "share": "Бөлүшүү",
+  "copy": "Көчүрүү",
+  "sharePic": "Сүрөттү бөлүшүү",
   "displayAlways": "Дисплей дайым жанып турат"
 }
