--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -24,5 +24,8 @@
   "close": "Закрыть",
   "adaptiveTheme": "Адаптивная тема",
   "darkTheme": "Темная тема",
+  "share": "Поделиться",
+  "copy": "Скопировать",
+  "sharePic": "Поделиться картинкой",
   "displayAlways": "Дисплей всегда включён"
 }
