--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -24,5 +24,8 @@
   "close": "Kapat",
   "adaptiveTheme": "Adaptif mod",
   "darkTheme": "Gece modu",
+  "share": "Paylaş",
+  "copy": "Kopyala",
+  "sharePic": "Resmi paylaş",
   "displayAlways": "Hep açık ekran"
 }
