--- a/lib/l10n/app_uz.arb
+++ b/lib/l10n/app_uz.arb
@@ -24,5 +24,8 @@
   "close": "Ёпиш",
   "adaptiveTheme":  "Адаптив мавзу",
   "darkTheme":  "Тунги мавзу",
+  "share": "Ulashish",
+  "copy": "Nusxa olish",
+  "sharePic": "Rasmni ulashish",
   "displayAlways":  "Экран доимо ёниқ"
 }
