--- a/lib/l10n/app_kk.arb
+++ b/lib/l10n/app_kk.arb
@@ -22,10 +22,15 @@
   "forLightTheme": "Жарық тақырыпқа арналған",
   "forDarkTheme": "Күңгірт тақырыпқа арналған",
   "close": "Жабу",
-  "adaptiveTheme": "Бейімделгіш тақырып",
-  "darkTheme": "Күңгірт тақырып",
   "share": "Бөлісу",
   "copy": "Көшіру",
   "sharePic": "Суретті бөлісу",
+  "language": "Тіл",
+  "appLanguage": "Қосымша тілі",
+  "themeColor": "Тақырып түсі",
+  "selectThemeColor": "Тақырып түсін таңдаңыз",
+  "theme": "Тақырып",
+  "themeModes": "Жарық, Қараңғы, Жүйе",
+  "textSizeNames": "Кішкентай, Қалыпты, Орташа, Үлкен, Өте үлкен, Ең үлкен",
   "displayAlways": "Әрдайым қосулы дисплей"
 }
