--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -22,10 +22,15 @@
   "forLightTheme": "Для светлой темы",
   "forDarkTheme": "Для темной темы",
   "close": "Закрыть",
-  "adaptiveTheme": "Адаптивная тема",
-  "darkTheme": "Темная тема",
   "share": "Поделиться",
   "copy": "Скопировать",
   "sharePic": "Поделиться картинкой",
+  "language": "Язык",
+  "appLanguage": "Язык приложения",
+  "themeColor": "Цвет темы",
+  "selectThemeColor": "Выберите цвет темы",
+  "theme": "Тема",
+  "themeModes": "Светлая, Темная, Система",
+  "textSizeNames": "Маленький, Нормальный, Средний, Большой, Очень большой, Максимальный",
   "displayAlways": "Дисплей всегда включён"
 }
